# Isha

./: .gitignore  FRAMEWORK_SUMMARY.md  FULLSTACK_GUIDE.md  LICENSE  MANIFEST.in  NEW_FEATURES.md  QUICK_REFERENCE.md  README.md  app.pyisha  app_database.db  demo_enhanced.db  demo_enhanced.pyisha  pyproject.toml  setup.py
.github/workflows/: publish.yml
GIT/: getting-started.html  index.html  script.js  styles.css
Isha_Website/: .gitignore  app.py  config.py  requirements.txt
Isha_Website/models/: __init__.py
Isha_Website/routes/: __init__.py
Isha_Website/static/css/: style.css
Isha_Website/static/js/: main.js
Isha_Website/templates/: base.html  docs.html  index.html
Isha_Website/tests/: test_app.py
Ishaa_Website/: app.py  config.py  requirements.txt
Ishaa_Website/models/: __init__.py
Ishaa_Website/routes/: __init__.py
Ishaa_Website/static/css/: style.css
Ishaa_Website/static/js/: docs.js  main.js
Ishaa_Website/templates/: base.html  docs.html  index.html
examples/: full_app.py  minimal_app.py  rest_api.py
isha/: __init__.py  __main__.py  app.py  auth.py  blueprints.py  cache.py  cli.py  config.py  core.py  cors.py  database.py  di.py  forms.py  graphql.py  loader.py  logger.py  middleware.py  openapi.py  orm.py  plugins.py  ratelimit.py  request.py  response.py  routing.py  sare.py  sare_codepath.py  sare_optimizer.py  sare_predictor.py  sare_reporter.py  sare_traffic.py  server.py  session.py  static.py  tasks.py  template.py  testing.py  uploads.py  utils.py  websocket.py
isha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ishaa/: __init__.py  __main__.py  app.py  auth.py  blueprints.py  cli.py  di.py  graphql.py  middleware.py  openapi.py  orm.py  plugins.py  reality.py  request.py  response.py  routing.py  sare.py  sare_codepath.py  sare_optimizer.py  sare_predictor.py  sare_reporter.py  sare_traffic.py  seqp.py  server.py  tasks.py  template.py  testing.py  utils.py  websocket.py
tests/: test_auth.py  test_core.py  test_middleware.py  test_orm.py  test_template.py
