[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isha"
version = "0.1.0"
description = "ISHA Framework — Simple. Human. Timeless."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ISHA", email = "hello@isha.dev"}
]
keywords = [
    "web",
    "framework",
    "http",
    "server",
    "simple",
    "minimal",
    "isha"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/isha-framework/isha"
Documentation = "https://isha.dev/docs"
Repository = "https://github.com/isha-framework/isha"
Issues = "https://github.com/isha-framework/isha/issues"

[project.scripts]
isha = "isha.cli:main"

[tool.setuptools.packages.find]
include = ["isha*"]

[tool.setuptools.package-data]
isha = ["py.typed"]
