[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "isha"
version = "1.0.0"
description = "A modern, lightweight, high-performance Python web framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Isha Framework Contributors"},
]
keywords = ["web", "framework", "async", "asgi", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
full = ["uvicorn>=0.20.0", "bcrypt>=4.0.0", "jinja2>=3.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.20.0"]

[project.scripts]
isha = "isha.cli:main"

[project.urls]
Homepage = "https://github.com/jayanthansenthilkumar/ISHA_Framework"
Repository = "https://github.com/jayanthansenthilkumar/ISHA_Framework"
Issues = "https://github.com/jayanthansenthilkumar/ISHA_Framework/issues"
