[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishaa"
version = "1.1.0"
description = "A modern, lightweight, high-performance Python web framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Jayanthan Senthilkumar"},
]
keywords = ["web", "framework", "async", "asgi", "http", "server", "rest", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
full = ["uvicorn>=0.20.0", "bcrypt>=4.0.0", "jinja2>=3.0.0"]
uvicorn = ["uvicorn>=0.20.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.20.0", "httpx>=0.23.0"]

[project.scripts]
ishaa = "ishaa.cli:main"

[project.urls]
Homepage = "https://github.com/jayanthansenthilkumar/ISHAA_Framework"
Documentation = "https://github.com/jayanthansenthilkumar/ISHAA_Framework#readme"
Repository = "https://github.com/jayanthansenthilkumar/ISHAA_Framework"
Issues = "https://github.com/jayanthansenthilkumar/ISHAA_Framework/issues"

[tool.setuptools.packages.find]
include = ["ishaa*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
